ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
spec:
  basicAuth:
    secret: authsecret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-trigger-api
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/api/v1`)
    middlewares:
    - name: traefik-auth
    services:
    - kind: Service
      name: trigger-api
      port: 8080
